--- a/client/src/assets/stylesheets/navbar.css
+++ b/client/src/assets/stylesheets/navbar.css
@@ -1,3 +1,9 @@
-/* .NavBarContainer {
-    
-} */
+.NavBarContainer {
+	font-family: 'Noto Sans', sans-serif;
+	/* position: sticky;
+	top: 0; */
+}
+
+.MenuItem {
+	/* color: #e8e8e8; */
+}
