added basic dark mode lol

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -10,8 +10,8 @@ body {
 
 .App {
 	text-align: center;
-	background-color: #f4f4f2;
-	height: 100vh;
+	/* background-color: #f4f4f2; */
+	/* height: 100vh; */
 }
 
 .App-logo {
