--- a/client/src/assets/stylesheets/navbar.css
+++ b/client/src/assets/stylesheets/navbar.css
@@ -1,7 +1,8 @@
 .NavBarContainer {
 	font-family: 'Noto Sans', sans-serif;
-	/* position: sticky;
-	top: 0; */
+	position: fixed;
+	/* /* position: sticky; */
+	/* top: 0; */
 }
 
 .MenuItem {
